Se corrigieron las imagenes de los archivos html

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
         <header>
 
             <div class="caja">
-                <h1><img src="imagenes/logo.png" alt="Logo de la Barbeía Alura"></h1><!--El atributo ALT o etiqueta ALT es un atributo HTML para un texto que describe una imagen. El atributo ALT se coloca directamente en la etiqueta de la imagen. Si una imagen no se puede mostrar por alguna razón, el atributo ALT proporciona texto alternativo para mostrar en su lugar. -->
+                <h1><img src="logo.png" alt="Logo de la Barbeía Alura"></h1><!--El atributo ALT o etiqueta ALT es un atributo HTML para un texto que describe una imagen. El atributo ALT se coloca directamente en la etiqueta de la imagen. Si una imagen no se puede mostrar por alguna razón, el atributo ALT proporciona texto alternativo para mostrar en su lugar. -->
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-        <img src="imagenes/logo-blanco.png" alt="Logo de la Barbeía Alura">
+        <img src="logo-blanco.png" alt="Logo de la Barbeía Alura">
         <p class="copyright">&copy Copyright Barbería Alura 2024</p>
     </footer>
 
