--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,7 @@
         <header>
 
             <div class="caja">
-                <h1><img src="imagenes/logo.png"></h1>
+                <h1><img src="logo.png"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -30,19 +30,19 @@
             <ul class="productos">
                 <li>
                     <h2>Cabello</h2>
-                    <img src="imagenes/cabello.jpg">
+                    <img src="cabello.jpg">
                     <p class="descripcion">Con tijera o máquina, a gusto del cliente</p>
                     <p class="precio">10 USD</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="imagenes/barba.jpg">
+                    <img src="barba.jpg">
                     <p class="descripcion">Corte y diseño profesional de Barba</p>
                     <p class="precio">8 USD</p>
                 </li>
                 <li>
                     <h2>Cabello + Barba</h2>
-                    <img src="imagenes/cabello+barba.jpg">
+                    <img src="cabello+barba.jpg">
                     <p class="descripcion">Paquete completo de Cabello y Barba</p>
                     <p class="precio">15 USD</p>
                 </li>
@@ -50,7 +50,7 @@
         </main>
 
         <footer>
-            <img src="imagenes/logo-blanco.png">
+            <img src="logo-blanco.png">
             <p class="copyright">&copy Copyright Barbería Alura 2024</p>
         </footer>
         
